--- a/Project.toml
+++ b/Project.toml
@@ -1,5 +1,5 @@
-name = "ConvexHulls2D"
-uuid = "ebb3778a-1f42-11e9-1d62-c5919383d521"
+name = "PlanarConvexHulls"
+uuid = "145d500b-351c-58b3-a0aa-f5d7e249d989"
 authors = ["Twan Koolen <koolen.twan@gmail.com>"]
 version = "0.1.0"
 
@@ -8,7 +8,7 @@ LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 
 [compat]
-julia = "1.1"
+julia = "1.0"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
