--- a/Project.toml
+++ b/Project.toml
@@ -11,8 +11,9 @@ StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 julia = "1.0"
 
 [extras]
-Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+UnicodePlots = "b8865327-cd53-5732-bb35-84acbb429228"
 
 [targets]
-test = ["Test", "Statistics"]
+test = ["Test", "Statistics", "UnicodePlots"]
