--- a/Project.toml
+++ b/Project.toml
@@ -13,7 +13,8 @@ julia = "1.0"
 [extras]
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
 UnicodePlots = "b8865327-cd53-5732-bb35-84acbb429228"
 
 [targets]
-test = ["Test", "Statistics", "UnicodePlots"]
+test = ["Test", "Statistics", "Pkg", "UnicodePlots"]
