--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,12 @@ os:
   - osx
 julia:
   - 1.0
+  - 1.1
   - nightly
+branches:
+  only:
+    - master
+    - /^v\d+\.\d+(\.\d+)?(-\S*)?$/ # version tags
 matrix:
   allow_failures:
     - julia: nightly
@@ -13,4 +18,7 @@ matrix:
 notifications:
   email: false
 after_success:
-  - julia -e 'using Pkg; Pkg.add("Coverage"); using Coverage; Codecov.submit(process_folder())'
+  - if [[ $TRAVIS_JULIA_VERSION = 1.1 ]] && [[ $TRAVIS_OS_NAME = linux ]]; then
+      julia --project=test/coverage -e 'using Pkg; Pkg.instantiate();
+          using Coverage; Codecov.submit(Codecov.process_folder())';
+    fi
