--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ authors = ["Twan Koolen <koolen.twan@gmail.com>"]
 version = "0.1.0"
 
 [deps]
+DocStringExtensions = "ffbed154-4ef7-542d-bbb7-c09d3a79fcae"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 
