--- a/Project.toml
+++ b/Project.toml
@@ -9,6 +9,8 @@ LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 
 [compat]
+DocStringExtensions = "0.8"
+StaticArrays = "0.10.3, 0.11, 0.12, 1"
 julia = "1.1"
 
 [extras]
